# dashrpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  outputfile.txt
client/: CMakeLists.txt  main.cpp  rpc_utils.cpp  rpc_utils.hpp
dashprotos/: CMakeLists.txt
dashrpc/: CMakeLists.txt  dashrpc.cpp
include/: dashrpc.hpp
libdashprotos/: CMakeLists.txt  core.grpc.pb.cc  core.grpc.pb.h  core.pb.cc  core.pb.h  platform.grpc.pb.cc  platform.grpc.pb.h  platform.pb.cc  platform.pb.h
libdashrpc/: CMakeLists.txt  app.cpp  core.cpp  dashrpc.cpp  platform.cpp
libdashrpc/include/: core.hpp  dashrpc.hpp  platform.hpp
libdashrpc/include/dashrpc/: dashrpc.hpp  platform.hpp
src/: CMakeLists.txt  dashrpc.cpp
tests/: CMakeLists.txt  jsonfile.h  main.cpp
tests/include/: jsontests.h  jsontests.h.in
tests/json_files/: test0.json
