# DASHRPC SOURCE
set(DASHRPC_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/dashrpc.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/core.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/platform.cpp")

# DASHRPC HEADERS
set(DASHRPC_HEADER
    "${CMAKE_CURRENT_SOURCE_DIR}/include/dashrpc/dashrpc.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/include/dashrpc/core.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/include/dashrpc/platform.hpp")

# DASHRPC INCLUDE DIRS
set(DASHRPC_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include/")

# DEFINE LIBRPC AS A TARGET
add_library(${LIB_DASHRPC} ${DASHRPC_SOURCES} ${DASHRPC_HEADER})

# SET INCLUDE DIR FOR OTHER LINKING TARGETS
target_include_directories(${LIB_DASHRPC} PUBLIC ${DASHRPC_INCLUDES})

# LINK AGAINS DEPENDENCIES
target_link_libraries(${LIB_DASHRPC} PRIVATE
    ${LIBS_GRPC}
    ${LIBS_PROTOBUF}
    ${LIBS_FMT}
    ${LIBS_JSON}
    ${LIB_DASHPROTOS})
